--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3791,7 +3791,7 @@
       </notes>
       <segment>
         <source>Danke an</source>
-        <target>Merci à</target>
+        <target>Remerciements</target>
       </segment>
     </unit>
     <unit id="0inaYdi" name="Thread verschieben">
