Added dig zones (#1078)

--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2749,5 +2749,17 @@
         <target>Aktion bei Klick:</target>
       </segment>
     </unit>
+    <unit id="0G7SYAt" name="Verbleibe Zonengrabungen:">
+      <segment>
+        <source>Verbleibe Zonengrabungen:</source>
+        <target>Verbleibe Zonengrabungen:</target>
+      </segment>
+    </unit>
+    <unit id="Bcli6ap" name="Verbleibende Ruinengrabungen:">
+      <segment>
+        <source>Verbleibende Ruinengrabungen:</source>
+        <target>Verbleibende Ruinengrabungen:</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
