--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -2323,7 +2323,7 @@
     <unit id="Q_CT7Yc" name="Setzen">
       <notes>
         <note category="german">Setzen</note>
-        <note category="from">twig:///templates/ajax/admin/widget/controls.twig</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/widget/controls.twig</note>
       </notes>
       <segment>
         <source>Setzen</source>
@@ -4353,6 +4353,28 @@
       <segment>
         <source>Aktion bei Klick:</source>
         <target>Aktion bei Klick:</target>
+      </segment>
+    </unit>
+    <unit id="0G7SYAt" name="Verbleibe Zonengrabungen:">
+      <notes>
+        <note category="german">Verbleibe Zonengrabungen:</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verbleibe Zonengrabungen:</source>
+        <target>Verbleibe Zonengrabungen:</target>
+      </segment>
+    </unit>
+    <unit id="Bcli6ap" name="Verbleibende Ruinengrabungen:">
+      <notes>
+        <note category="german">Verbleibende Ruinengrabungen:</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verbleibende Ruinengrabungen:</source>
+        <target>Verbleibende Ruinengrabungen:</target>
       </segment>
     </unit>
   </file>
