--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -20850,7 +20850,7 @@
       </notes>
       <segment>
         <source>ZERSTÖRT!!</source>
-        <target>DETRUITES !!</target>
+        <target>DÉTRUITES !!</target>
       </segment>
     </unit>
     <unit id="3I5M2q.">
