--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4151,7 +4151,7 @@
       </notes>
       <segment>
         <source>Absender wählen</source>
-        <target>Absender wählen</target>
+        <target>Enviar como</target>
       </segment>
     </unit>
     <unit id="X_Adc53">
